cargo-features = ["strip"]

[workspace]

members = [
	"kernel",
	"boot/amd64",
	"drivers/fs_fat",
	"drivers/virtio_block",
	"drivers/virtio_net",
	"lib/rust/arena",
	"lib/rust/driver_utils",
	"lib/rust/endian",
	"lib/rust/pci",
	"lib/rust/virtio",
	"lib/rust/virtio_net",
	"lib/rust/volatile",
	"lib/rust/rt",
	"lib/rust/rt_alloc",
	"base/init",
	"base/jail",
	"base/minish",
	"base/static_http_server",
]

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
lto = "fat"
debug = true
#strip = "symbols"

[profile.release.package.noraboot]
codegen-units = 1
opt-level = 'z'
#strip = "symbols"

[patch.crates-io]
dirs-next = { git = "https://git.sr.ht/~demindiro/dirs", branch = "norost" }
