cargo-features = ["strip"]

[workspace]

members = [
	"kernel",
	"boot/amd64",
	"drivers/fs_fat",
	"drivers/intel_hd_graphics",
	"drivers/scancode_to_char",
	"drivers/virtio_block",
	"drivers/virtio_gpu",
	"drivers/virtio_net",
	"lib/rust/arena",
	"lib/rust/driver_utils",
	"lib/rust/endian",
	"lib/rust/pci",
	"lib/rust/scancodes",
	"lib/rust/virtio",
	"lib/rust/virtio_block",
	"lib/rust/virtio_gpu",
	"lib/rust/virtio_net",
	"lib/rust/volatile",
	"lib/rust/rt",
	"lib/rust/rt_alloc",
	"lib/rust/io_queue",
	"lib/rust/io_queue_rt",
	"base/init",
	"base/jail",
	"base/minish",
	"base/static_http_server",
	"base/window_manager",
]

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
strip = "symbols"

[profile.dev.package.noraboot]
opt-level = 'z'

[profile.dev.package.init]
opt-level = 's'

[profile.release.package.noraboot]
codegen-units = 1
opt-level = 'z'
strip = "symbols"

[profile.release.package.init]
codegen-units = 1
opt-level = 's'
strip = "symbols"

[patch.crates-io]
dirs-next = { git = "https://git.sr.ht/~demindiro/dirs", branch = "norost" }
