cargo-features = ["strip"]

[workspace]
members = [
	"kernel",
	"boot/amd64",
	"drivers/framebuffer",
	"drivers/fs_fat",
	"drivers/gpt",
	"drivers/intel_hd_graphics",
	"drivers/pci",
	"drivers/ps2",
	"drivers/scancode_to_char",
	"drivers/virtio_block",
	"drivers/virtio_gpu",
	"drivers/virtio_net",
	"drivers/usb",
	"drivers/usb_hid",
	"drivers/usb_storage",
	"lib/rust/arena",
	"lib/rust/async_completion",
	"lib/rust/async_std",
	"lib/rust/driver_utils",
	"lib/rust/pci",
	"lib/rust/virtio",
	"lib/rust/virtio_block",
	"lib/rust/virtio_gpu",
	"lib/rust/virtio_net",
	"lib/rust/volatile",
	"lib/rust/rt",
	"lib/rust/rt_alloc",
	"lib/rust/rt_default",
	"lib/rust/io_queue",
	"lib/rust/io_queue_rt",
	"lib/rust/ipc/gpu",
	"lib/rust/ipc/window_manager",
	"lib/rust/ipc/stream_table",
	"lib/rust/ipc/usb",
	"base/join",
	"base/gui_cli",
	"base/image_viewer",
	"base/init",
	"base/minish",
	"base/ssh",
	"base/static_http_server",
	"base/window_manager",
]
exclude = [
	"thirdparty/rust"
]

[profile.dev]
split-debuginfo = 'unpacked'
panic = "abort"
opt-level = 1

[profile.release]
split-debuginfo = 'unpacked'
codegen-units = 1
panic = "abort"
opt-level = 's'
lto = "fat"
strip = "symbols"

[patch.crates-io]
dirs-next = { git = "https://git.sr.ht/~demindiro/dirs", branch = "norost" }
getrandom = { git = "https://git.sr.ht/~demindiro/getrandom" }
#xhci = { git = "https://github.com/Demindiro/xhci/", branch = "fix-try_from-type-range" }
xhci = { path = "../thirdparty/xhci" }

[patch."https://github.com/rust-osdev/usb"]
usb_hid_item = { path = "../lib/usb/usb_hid_item" }
usb_hid_usage = { path = "../lib/usb/usb_hid_usage" }
usb_request = { path = "../lib/usb/usb_request" }
