cargo-features = ["per-package-target"]

[package]
name = "nora"
version = "0.1.1"
edition = "2021"
default-target = "x86_64-unknown-none-norostbkernel"

[dependencies]
acpi = "*"
rsdp = "*"
pci = { path = "../lib/rust/pci" }
cfg-if = "1.0"
norostb_kernel = { path = "../lib/rust/kernel" }
arena = { path = "../lib/rust/arena" }
scancodes = { path = "../lib/rust/scancodes" }
compiler_builtins = { version = "0.1", features = ["mem"] }

[features]
# TODO only enable driver-portio for x86 platforms
default = [
	"mem-max-16t",
	"driver-pci",
	"driver-hpet",
	"driver-vga",
	"driver-ps2-keyboard",
	"driver-portio",
]
mem-max-16t = []
mem-max-256m = []
driver-pci = []
driver-hpet = []
driver-pic = []
driver-rtc = []
driver-vga = []
driver-ps2 = []
driver-ps2-keyboard = ["driver-ps2"]
driver-portio = []
debug = []
debug-sanitize-heap = []
