cargo-features = ["per-package-target"]

[package]
name = "nora"
version = "0.1.1"
edition = "2021"
default-target = "x86_64-unknown-none-norostbkernel"

[dependencies]
acpi = "*"
rsdp = "*"
pci = { path = "../lib/rust/pci" }
cfg-if = "1.0"
norostb_kernel = { path = "../lib/rust/kernel" }
arena = { path = "../lib/rust/arena" }
compiler_builtins = { version = "0.1", features = ["mem"] }
nora_stream_table = { path = "../lib/rust/ipc/stream_table" }

[dependencies.nrofs]
git = "https://git.sr.ht/~demindiro/nrofs/"

[features]
# TODO only enable driver-portio for x86 platforms
default = [
	"mem-max-16t",
	"driver-interrupt",
	"driver-pci",
	"driver-hpet",
	"driver-vga",
	"driver-portio",
]
mem-max-16t = []
mem-max-256m = []
driver-interrupt = []
driver-pci = []
driver-hpet = []
driver-pic = []
driver-rtc = []
driver-vga = []
driver-portio = []
debug = []
debug-sanitize-heap = []
