[package]
name = "gui_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
rt = { package = "norostb_rt", path = "../../lib/rust/rt" }
rt_alloc = { package = "norostb_rt_alloc", path = "../../lib/rust/rt_alloc" }
ipc_wm = { package = "ipc_window_manager", path = "../../lib/rust/ipc/window_manager" }
fontdue = "0.7"
hashbrown = "0.11"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc"]

[dependencies.io_queue_rt]
package = "nora_io_queue_rt"
path = "../../lib/rust/io_queue_rt"

[dependencies.scancodes]
path = "../../../lib/scancodes"
