cargo-features = ["per-package-target"]

[package]
name = "init"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
norostb_rt = { path = "../../lib/rust/rt" }
norostb_rt_alloc = { path = "../../lib/rust/rt_alloc" }
toml = { version = "0.5.6", default-features = false }
serde = "1.0"
serde_derive = "1.0"
