cargo-features = ["per-package-target"]

[package]
name = "init"
version = "0.2.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
norostb_rt = { path = "../../lib/rust/rt" }
norostb_rt_alloc = { path = "../../lib/rust/rt_alloc" }

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"

[dependencies.scf]
version = "0.1"
