cargo-features = ["per-package-target"]

[package]
name = "minish"
description = "Minimal shell with basic utilities built-in"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
term = "0.7"
clap = { version = "3.1.8", no-default-features = true, features = [] }
