[package]
name = "ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
futures = "0.3"
p256 = "0.11"
ecdsa = "0.14"
async-trait = "0.1"

[dependencies.async_std]
package = "norost_async_std"
path = "../../lib/rust/async_std"
default-features = false
features = ["std"]

[dependencies.nora_ssh]
git = "https://github.com/Demindiro/nora_ssh"
features = ["no_send"]

[dependencies.toml]
version = "0.5"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.clap]
version = "3.2"
default-features = false
features = ["std", "derive"]

[dependencies.base85]
version = "1.1"

[dependencies.ed25519-dalek]
version = "1.0"
default-features = false
