[package]
name = "static_http_server"
description = "Minimal static file server over HTTP"
version = "0.1.0"
edition = "2021"

[dependencies]
mhttp = "0.1"

[dependencies.async_std]
package = "norost_async_std"
path = "../../lib/rust/async_std"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"
