[package]
name = "window_manager"
version = "0.2.0"
edition = "2021"

[dependencies]
rt = { package = "norostb_rt", path = "../../lib/rust/rt" }
rt_alloc = { package = "norostb_rt_alloc", path = "../../lib/rust/rt_alloc" }
ipc_wm = { package = "ipc_window_manager", path = "../../lib/rust/ipc/window_manager" }

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc"]

[dependencies.ipc_gpu]
path = "../../lib/rust/ipc/gpu"

[dependencies.png]
version = "0.17"

[dependencies.gui3d]
path = "../../../lib/gui3d"

[dependencies.io_queue_rt]
package = "nora_io_queue_rt"
path = "../../lib/rust/io_queue_rt"
