cargo-features = ["per-package-target"]

[package]
name = "noraboot"
version = "0.3.0"
edition = "2021"
forced-target = "i686-unknown-none-norostbkernel"

[dependencies.compiler_builtins]
version = "0.1"
features = ["mem"]

[dependencies.cpuid]
git = "https://git.sr.ht/~demindiro/cpuid"

[dependencies.rsdp]
version = "*"
