[package]
name = "driver_fs_fat"
version = "0.2.0"
edition = "2021"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
default-features = false
features = ["std", "alloc"]

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
