cargo-features = ["per-package-target"]

[package]
name = "driver_intel_hd_graphics"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
driver_utils = { path = "../../lib/rust/driver_utils" }
rt = { package = "norostb_rt", path = "../../lib/rust/rt" }
rt_alloc = { package = "norostb_rt_alloc", path = "../../lib/rust/rt_alloc" }
pci = { path = "../../lib/rust/pci" }
kernel = { package = "norostb_kernel", path = "../../lib/rust/kernel" }
