cargo-features = ["per-package-target"]

[package]
name = "driver_intel_hd_graphics"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
rt = { package = "norostb_rt", path = "../../lib/rust/rt" }
rt_alloc = { package = "norostb_rt_alloc", path = "../../lib/rust/rt_alloc" }
pci = { path = "../../lib/rust/pci" }

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false

[dependencies.ipc_gpu]
path = "../../lib/rust/ipc/gpu"

[dependencies.endian]
package = "nora_endian"
version = "0.1"
