[package]
name = "driver_ps2"
version = "0.2.0"
edition = "2021"

[dependencies.async_std]
package = "norost_async_std"
path = "../../lib/rust/async_std"

[dependencies.driver_utils]
package = "driver_utils"
path = "../../lib/rust/driver_utils"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.input]
path = "../../../lib/input"

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"
