[package]
name = "driver_scancode_to_char"
version = "0.2.0"
edition = "2021"

[dependencies]
norostb_kernel = { path = "../../lib/rust/kernel" }
scancodes = { path = "../../lib/rust/scancodes" }

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc"]

[dependencies.async_std]
package = "norost_async_std"
path = "../../lib/rust/async_std"
