[package]
name = "driver_usb"
version = "0.1.0"
edition = "2021"

[features]
#default = ["trace", "poison"]
trace = []
poison = []

[dependencies.pci]
path = "../../lib/rust/pci"

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc", "accessor"]

[dependencies.xhci]
version = "0.9"

[dependencies.scf]
version = "0.1"

[dependencies.ipc_usb]
path = "../../lib/rust/ipc/usb"

[dependencies.io_queue_rt]
package = "nora_io_queue_rt"
path = "../../lib/rust/io_queue_rt"

[dependencies.usb_request]
git = "https://github.com/rust-osdev/usb"
