[package]
name = "driver_usb_kbd"
version = "0.1.0"
edition = "2021"

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc", "accessor"]

[dependencies.ipc_usb]
path = "../../lib/rust/ipc/usb"

[dependencies.scancodes]
path = "../../lib/rust/scancodes"
