cargo-features = ["per-package-target"]

[package]
name = "driver_virtio_block"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
norostb_kernel = { path = "../../lib/rust/kernel" }
virtio = { path = "../../lib/rust/virtio" }
virtio_block = { path = "../../lib/rust/virtio_block" }
pci = { path = "../../lib/rust/pci" }
driver_utils = { path = "../../lib/rust/driver_utils" }
