cargo-features = ["per-package-target"]

[package]
name = "driver_virtio_block"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
virtio = { path = "../../lib/rust/virtio" }
virtio_block = { path = "../../lib/rust/virtio_block" }
pci = { path = "../../lib/rust/pci" }

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"

[dependencies.driver_utils]
path = "../../lib/rust/driver_utils"
default-features = false
features = ["alloc"]
