cargo-features = ["per-package-target"]

[package]
name = "driver_virtio_net"
version = "0.1.1"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
driver_utils = { path = "../../lib/rust/driver_utils" }
smoltcp = { version = "*", default-features = false, features = ["alloc", "proto-ipv6", "medium-ethernet", "socket-tcp", "socket-udp", "proto-ipv4", "socket-dhcpv4"] }
virtio = { path = "../../lib/rust/virtio" }
virtio_net = { path = "../../lib/rust/virtio_net" }
pci = { path = "../../lib/rust/pci" }

[dependencies.async_std]
package = "norost_async_std"
path = "../../lib/rust/async_std"

[dependencies.async-trait]
version = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.rt]
package = "norostb_rt"
path = "../../lib/rust/rt"

[dependencies.rt_alloc]
package = "norostb_rt_alloc"
path = "../../lib/rust/rt_alloc"

[dependencies.rt_default]
package = "norost_rt_default"
path = "../../lib/rust/rt_default"
