[package]
name = "arena"
version = "0.2.0"
edition = "2021"

[dependencies]
# When built as part of libstd
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }

[features]
rustc-dep-of-std = [
	"alloc",
	"core",
	"compiler_builtins",
	"compiler_builtins/rustc-dep-of-std",
]
