[package]
name = "norost_async_std"
version = "0.2.0"
edition = "2021"

[features]
#default = ["rt_default"]
std = ["futures-io"]

[dependencies.async_completion]
path = "../async_completion"

[dependencies.io_queue_rt]
package = "nora_io_queue_rt"
path = "../io_queue_rt"

[dependencies.rt]
package = "norostb_rt"
path = "../rt"

#[dependencies.rt_default]
#package = "norost_rt_default"
#path = "../rt_default"
#optional = true

[dependencies.no-std-net]
version = "0.6"
default-features = false

[dependencies.futures-lite]
version = "1.12"
default-features = false

[dependencies.futures-core]
version = "0.3"
default-features = false

[dependencies.futures-io]
version = "0.3"
default-features = false
optional = true

[dependencies.futures-task]
version = "0.3"
default-features = false

[dependencies.pin-project]
version = "1.0"
default-features = false
