cargo-features = ["per-package-target"]

[package]
name = "driver_utils"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-norostb"

[dependencies]
arena = { path = "../arena" }
norostb_kernel = { path = "../kernel" }
norostb_rt = { path = "../rt" }
nora_stream_table = { path = "../ipc/stream_table" }

[features]
default = ["std", "alloc", "rt"]
std = []
alloc = []
rt = []
