[package]
name = "nora_io_queue_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
nora_io_queue = { path = "../io_queue" }
# When built as part of libstd
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }

[features]
rustc-dep-of-std = [
	"alloc",
	"core",
	"compiler_builtins",
	"arena/rustc-dep-of-std",
	"nora_io_queue/rustc-dep-of-std",
]
