[package]
name = "norostb_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
norostb_kernel = { path = "../kernel" }
cfg-if = "1.0"

# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }

[features]
rustc-dep-of-std = [
	"core",
	"compiler_builtins",
	"cfg-if/rustc-dep-of-std",
	"norostb_kernel/rustc-dep-of-std",
]
