[package]
name = "norostb_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
norostb_kernel = { path = "../kernel" }
cfg-if = "1.0"
nora_io_queue_rt = { path = "../io_queue_rt" }

# When built as part of libstd
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", features = ["mem"] }

[features]
rustc-dep-of-std = [
	"alloc",
	"core",
	"cfg-if/rustc-dep-of-std",
	"norostb_kernel/rustc-dep-of-std",
	"nora_io_queue_rt/rustc-dep-of-std",
	"compiler_builtins/rustc-dep-of-std",
]
