[package]
name = "norostb_rt"
version = "0.2.0"
edition = "2021"

[dependencies]
norostb_kernel = { path = "../kernel" }
cfg-if = "1.0"

# When built as part of libstd
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }

[features]
rustc-dep-of-std = [
	"alloc",
	"core",
	"cfg-if/rustc-dep-of-std",
	"norostb_kernel/rustc-dep-of-std",
]
